# MpiWrapper

./: CMakeLists.txt  CompilerWarnings.cmake  README.md
include/: CMakeLists.txt  array_casts.hpp  mpi_cart_communicator.hpp  mpi_communicator.hpp  mpi_datatype.hpp  mpi_datatype_base.hpp  mpi_functions.hpp  mpi_native_datatypes.hpp  runtime_assert.hpp
test/: CMakeLists.txt  catch_mpi_main.cpp  test_wrapper.cpp
