FIND_PACKAGE(MPI REQUIRED)
MESSAGE("STATUS MPI FOUND: ${MPI_CXX_FOUND}")


ADD_LIBRARY(mpi_wrapper INTERFACE)
TARGET_INCLUDE_DIRECTORIES(mpi_wrapper INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(mpi_wrapper SYSTEM INTERFACE ${MPI_CXX_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(mpi_wrapper INTERFACE ${MPI_CXX_LIBRARIES})
TARGET_LINK_LIBRARIES(mpi_wrapper PRIVATE INTERFACE project_options project_warnings)
